apps/base/growlog/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: growlog-web
  labels:
    app: growlog-web
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: growlog-web
  template:
    metadata:
      labels:
        app: growlog-web
    spec:
      containers:
        - name: growlog-web
          image: artifactory.local.hejsan.xyz/gitlab-registry/josmase/apps/growlog/web:2026-08-24-c7ff345d
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 64Mi
              cpu: 100m
            requests:
              memory: 32Mi
              cpu: 10m
