apps/base/growlog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: growlog-web
  labels:
    app: growlog-web
spec:
  selector:
    app: growlog-web
  ports:
    - name: http
      targetPort: 80
      port: 80
