apps/base/growlog/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: growlog-web
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`growlog.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: growlog-web
          port: http
  tls:
    secretName: ${CERT_SECRET_INTERNAL}
